# rust-backend-stack

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  sample.env  sqlx-data.json
.github/workflows/: audit.yml  general.yml
migrations/: 1_setup.sql  2_user.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs
src/app/: error.rs  extractor.rs  mod.rs  ping.rs  types.rs  users.rs
src/app/ping/: mod.rs
src/app/users/: mod.rs  schema.rs  utils.rs
tests/: cucumber.rs  user.feature
tests/features/: user.feature
tests/step_defs/: user.rs
