[package]
name = "rust-backend-stack"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]

[dependencies]
anyhow = "1.0.70"
argon2 = "0.5.0"
async-trait = "0.1.67"
axum = { version = "0.6.11", features = ["tower-log", "macros"] }
clap = { version = "4.1.11", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3"
hmac = "0.12.1"
itertools = "0.10.5"
jwt = "0.16.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.155", features = ["derive"] }
sha2 = "0.10.6"
sqlx = { version = "0.6.2", features = [
    "offline",
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
] }
thiserror = "1.0.39"
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.11"
tower-http = { version = "0.4.0", features = ["trace"] }
utoipa = "3.1.0"
utoipa-swagger-ui = { version = "3.1.1", features = ["axum"] }
uuid = { version = "1.3.0", features = ["serde"] }

[dev-dependencies]
cucumber = "0.19.1"
reqwest = { version = "0.11.14", features = ["json"] }

[[test]]
name = "cucumber"
harness = false
test = false
